# gloomy

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/gloomy-app/: Cargo.toml
crates/gloomy-app/src/: app.rs  lib.rs  window.rs
crates/gloomy-core/: Cargo.toml
crates/gloomy-core/src/: container.rs  data_source.rs  datagrid.rs  image_renderer.rs  interaction.rs  kpi.rs  layout.rs  layout_engine.rs  layout_engine_helpers.rs  lib.rs  primitives.rs  rect.rs  renderer.rs  rich_text.rs  style.rs  style_context.rs  svg_loader.rs  text.rs  text_init_helper.rs  texture.rs  theme.rs  tree.rs  ui.rs  validation.rs  widget.rs  widget_state.rs
crates/gloomy-core/src/shaders/: image.wgsl  primitives.wgsl
crates/gloomy-core/src/tests/: layout_tests.rs  mod.rs  tab_tests.rs
crates/gloomy-designer/: Cargo.toml
crates/gloomy-designer/src/: app.rs  main.rs  ron_export.rs
crates/gloomy-designer/src/model/: design.rs  mod.rs  selection.rs
crates/gloomy-designer/src/panels/: canvas.rs  inspector.rs  mod.rs  palette.rs  tree.rs
crates/gloomy-driver/: Cargo.toml
crates/gloomy-driver/src/: lib.rs
docs/: architecture.md  datagrid.md  rich_text.md  roadmap.md  testing.md  testing_strategy.md  theming.md  ui_paradigms.md  widgets.md
docs/widgets/: overview.md  tree.md
examples/: README.md  basic_components.rs  borders_showcase.rs  chart_demo.rs  dashboard_demo.rs  datagrid_edit_demo.rs  datepicker_demo.rs  debug_tab_isolation.rs  divider_demo.rs  form_ui.rs  grid_ui.rs  hello_gloomy.rs  input_demo.rs  large_datagrid.rs  layout_benchmark.rs  rich_text_showcase.rs  ron_loader_demo.rs  ron_ui.rs  scroll_ui.rs  scrollbar_demo.rs  showcase.rs  simple_datagrid.rs  simple_starter.rs  simple_tree.rs  style_ui.rs  tab_widget_demo.rs  table_ui.rs  text_clipping_demo.rs  theme_switcher.rs  validation_demo.rs  virtual_list.rs  visuals_demo.rs  widgets_showcase.rs  widgets_ui.rs
examples/assets/: all.ron  dashboard.ron
examples/ui/: dashboard.ron  form_demo.ron  grid_demo.ron  scroll_demo.ron  showcase.ron  showcase_all.ron  showcase_dashboard.ron  showcase_inputs.ron  style_demo.ron  table_layout.ron  visuals_demo.ron  widgets_demo.ron
styles/: modern.ron
themes/: dark.ron  light.ron
